@@ -52,5 +52,6 @@ add_subdirectory(wholeBodyTorqueObserver)
 add_subdirectory(robots)
 add_subdirectory(simConfig)
 add_subdirectory(iCubTest)
+add_subdirectory(iCubCluster)
 
 
