@@ -1,0 +1,20 @@
+set(appname iCubCluster)
+
+icub_app(${appname})
+
+file(GLOB scripts ${CMAKE_CURRENT_SOURCE_DIR}/scripts/*.template ${CMAKE_CURRENT_SOURCE_DIR}/scripts/icub-cluster.py)
+file(GLOB conf ${CMAKE_CURRENT_SOURCE_DIR}/conf/*.ini)
+
+icub_app_install(${appname} 
+				FILES ${scripts}
+				DESTINATION scripts)
+
+icub_app_install(${appname} 
+				FILES ${conf}
+				DESTINATION conf)
+				
+
+				
+
+
+
